//
//  DisplayInformation.swift
//  Contacts-App
//
//  Created by Anand Nimje on 10/11/19.
//  Copyright © 2019 Anand. All rights reserved.
//

import Foundation

public let displayInformation = ["first_name" : "First Name",
                                 "last_name" : "Last Name",
                                 "phone_number" : "Mobile",
                                 "email" : "Email"]
public let displayInformationKeys = ["first_name",
                                     "last_name",
                                     "phone_number",
                                     "email"]
