...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="J7v-vU-2nj" secondAttribute="bottom" id="BDm-dc-pUg"/>
                            <constraint firstItem="J7v-vU-2nj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Bal-MQ-CLx"/>
                            <constraint firstItem="J7v-vU-2nj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="n5S-GA-fho"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="87s-yx-M1x">
                        <barButtonItem key="leftBarButtonItem" title="Groups" id="G5Q-Xs-muo">
                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <connections>
                                <action selector="createGroup:" destination="BYZ-38-t0r" id="QmH-O9-Jos"/>
                            </connections>
                        </barButtonItem>
...
